--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
                     <h1>Basics <small>Turn any part of your HTML content into a &ldquo;tweetable&rdquo; quote.</small></h1>
                 </div>              
                 <p>
-                jQuery ProQuo is a quick way to encourage your readers to spread your content through twitter. Simple define the regions
-                in your markup that you would like to be tweetable and ProQuo will handle the rest.
+                jQuery ProQuo is a quick way to encourage your readers to spread your content through twitter. Simply define the regions
+                in your markup that you would like to make &ldquo;tweetable&rdquo; and ProQuo will handle the rest.
                 </p>
                 <p>For example, click the "Tweet this" link in the quote below:
                 <blockquote class="tweet">
                     jQuery ProQuo: Turn any part of your content into &ldquo;tweetable&rdquo; quotes.
                 </blockquote>
-                ProQuoe will auto truncate tweets that are longer than 140 characters (includees source link length):
+                ProQuo will auto truncate tweets that are longer than 140 characters (includes source link length):
                 <blockquote class="tweet">
                 Any intelligent fool can make things bigger and more complex... It takes a touch of genius - and a lot of courage to move in the opposite direction.
                 <small>Albert Einstein</small>
@@ -126,7 +126,7 @@
                 <p>
                     By default ProQuo does a few things for you:
                     <ul>
-                        <li>Automatically determines propert text length and adds ellipsis in the tweet if the text needs to be truncated</li>
+                        <li>Automatically determines proper text length and adds ellipsis in the tweet if the text needs to be truncated</li>
                         <li>Includes a link back to the page that the quote was tweeted from (by default)</li>
                         <li>Adds a &ldquo;Tweet this&rdquo; link to the tweetable element</li>
                         <li>Auto-loads the <a href="https://platform.twitter.com/widgets.js">Twitter widgets script</a> if it's not already available on the page. </li>
@@ -150,9 +150,9 @@ $('blockquote#curly').proQuo({
 </pre>                
                 </p>
 
-                <h4>Use the offical twitter button</h4>
+                <h4>Use the official twitter button</h4>
                 <p>
-                    <blockquote id="davinci">&ldquo;Simplicity is the ultimate sophistication.&rdquo; - Lenoardo da Vinci</blockquote>
+                    <blockquote id="davinci">&ldquo;Simplicity is the ultimate sophistication.&rdquo; - Leonardo da Vinci</blockquote>
                     <h5>The code</h5>
 <pre class="prettyprint lang=javascript">
 $('blockquote#davinci').proQuo({
@@ -253,7 +253,7 @@ $('blockquote#scott-adams').proQuo({
                     <dt>getTwitterStatus(text, url)</dt> 
                     <dd>
                         Returns the actual tweet status text. Defaults to the tweet text + the link-back URL. This function
-                        is also responsible for truncating the tweet and add ellipsis if necessary.
+                        is also responsible for truncating the tweet and adding ellipsis if necessary.
                     </dd>
                     
                     <dt>getTweetUrl(status, url)</dt> 
@@ -275,7 +275,7 @@ $('blockquote#scott-adams').proQuo({
         </div><!-- /content -->
 
         <footer>
-            <p>Created by <a href="https://twitter.com/#!/wmdmark">@wmdmark</a>. Origional idea by <a href="https://twitter.com/#!/geoff_stevens">@geoff_stevens</a></p>
+            <p>Created by <a href="https://twitter.com/#!/wmdmark">@wmdmark</a>. Original idea by <a href="https://twitter.com/#!/geoff_stevens">@geoff_stevens</a></p>
         </footer>
 
     </div><!-- /container -->
