--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ $('blockquote#scott-adams').proQuo({
                     <dd>If set to true, ProQuo will load Twitter's standard <a href="http://twitter.com/about/resources/buttons">sharing buttons</a>.</dd>
                 </dl>
 
-                <h4>Functions overrides</h4>
+                <h4>Function overrides</h4>
                 <dl>
                     <dt>getTweetSourceUrl</dt> 
                     <dd>Returns the link-back URL to be included in the tweet. Defaults to <code>window.location</code></dd>
